# ACE3

addons/apl/: config.cpp
addons/atragmx/: config.cpp
addons/extensions/: $PBOPREFIX$  README.md  XEH_preInit.sqf  config.cpp  script_component.hpp
addons/extensions/functions/: fnc_callAsync.sqf
addons/penetration/: CfgAmmo.hpp  config.cpp
addons/penetration/penetration/: armour_plate.hpp
addons/vehicledamage/: ACE_Settings.hpp  CfgAmmo.hpp  CfgEventHandlers.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  fnc_monitorResultsPFH.sqf  script_component.hpp
addons/vehicledamage/functions/: fnc_createVehicleMap.sqf  fnc_dispatchDamage.sqf  fnc_doHit.sqf  fnc_getPenetrationData.sqf  fnc_monitorResultsPFH.sqf  fnc_registerVehicleWithExtension.sqf  longRodCalculationTest.sqf
extensions/: CMakeLists.txt
extensions/advanced_ballistics/: AdvancedBallistics.cpp  CMakeLists.txt
extensions/breakLine/: CMakeLists.txt  ace_breakLine.cpp
extensions/break_line/: ace_break_line.cpp
extensions/clipboard/: ace_clipboard.cpp
extensions/common/: CMakeLists.txt  ace_common.cpp  ace_common.h  arguments.hpp  dispatch.hpp  dispatcher.hpp  kdtree.cpp  kdtree.hpp  logging.hpp  membuf.hpp  shared.cpp  shared.hpp  transform_matrix.hpp  vector.hpp
extensions/common/directx/: d3d_display.cpp  d3d_display.hpp  render_window.cpp  render_window.hpp
extensions/common/p3d/: animation.cpp  animation.hpp  compressed.cpp  compressed.hpp  compressed_fill.hpp  lod_data.cpp  lod_data.hpp  lod_info.cpp  lod_info.hpp  model.cpp  model.hpp  model_info.cpp  model_info.hpp  parser.cpp  parser.hpp  read_helpers.hpp  skeleton.cpp  skeleton.hpp
extensions/common/pbo/: archive.cpp  archive.hpp  search.cpp  search.hpp
extensions/common/simulation/: object.cpp  object.hpp
extensions/common/tests/: p3d_parser.cpp
extensions/dynload/: ace_dynload.cpp  ace_dynload_dllmain.cpp  dynloader.hpp
extensions/fcs/: CMakeLists.txt  ace_fcs.cpp
extensions/tests/: CMakeLists.txt  dxtk_test.cpp  longrod_dxtk_test.txt  p3d_parser.cpp  pbo_search.cpp  test_render.cpp  vd_ext_test.cpp  vd_test_strings.txt
extensions/vd/: CMakeLists.txt  ace_vd.cpp  ace_vd.hpp  ace_vd_dllmain.cpp  base_vehicle.cpp  base_vehicle.hpp  controller.cpp  controller.hpp  damage.hpp  game.hpp  longrod.hpp  materials.hpp  model_collection.cpp  model_collection.hpp  penetration.hpp  penetration_model.hpp  vehicle.cpp  vehicle.hpp
extensions/vd/damage/: penetrator.cpp  penetrator.hpp
extensions/vd/debug/: penetration_display.cpp  penetration_display.hpp
extensions/vd/penetration/: bullet.cpp  bullet.hpp  fragment.cpp  fragment.hpp  longrod.cpp  longrod.hpp  materials.hpp  missile.cpp  missile.hpp
